updated pdf viewer.

--- a/flexible/public/index.html
+++ b/flexible/public/index.html
@@ -114,8 +114,10 @@
       <!-- home section ends here -->
       
     <!-- RESUME  container-->
-    <div class="resume align-self-center" width="100%" height="100%" >
-        <iframe width="100%" height="100%" src="files/Sathish_kumar_manoharan_updated_resume.pdf"></iframe>
+    <div class="resume  container right" width="100%" height="100%" >
+        <embed onmousedown="disableRightclick(event);" class=" resume-pdf align-self-center" 
+            src="files/Sathish_kumar_manoharan_updated_resume.pdf#toolbar=0&navpanes=0&scrollbar=0" 
+            width="600" height="620">
     </div> 
     <!-- App ends here ---->
 
